--- a/app/src/main/res/layout/activity_pushparams.xml
+++ b/app/src/main/res/layout/activity_pushparams.xml
@@ -227,7 +227,6 @@
                 />
         </FrameLayout>
 
-
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
@@ -320,36 +319,44 @@
 
     </LinearLayout>
 
-<!--    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        >
-
-        <Button
-            android:id="@+id/btn_watermark_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#600000ff"
-            android:text="水印位置"
-            />
-
-        <TextView
-            android:id="@+id/tv_watermark_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:textColor="#000"
-            />
-    </LinearLayout>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="#F5F5F5"
-        android:gravity="center"
         >
+
+        <LinearLayout
+            android:id="@+id/ll_speed_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="end"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/ll_speed_layout"
+            >
+
+            <ImageView
+                android:id="@+id/iv_speed"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/smooth_enter"
+                />
+
+            <TextView
+                android:id="@+id/tv_speed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:text="测网速"
+                android:textSize="18sp"
+                android:layout_marginLeft="10dp"
+                android:visibility="gone"
+                />
+
+        </LinearLayout>
 
     <Button
         android:id="@+id/connectBT"
@@ -359,7 +366,14 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:layout_gravity="center"
         android:background="@drawable/push_params_set_click_btn"
         />
     </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/auv"
+        />
 </LinearLayout>
