--- a/app/src/main/res/layout/activity_end.xml
+++ b/app/src/main/res/layout/activity_end.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/liveover_bg"
-    tools:context="com.zmtmt.zhibohao.endActivity">
+    tools:context="com.zmtmt.zhibohao.activity.EndActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/head_view"
