强行用了一波RxJava+Retrofit

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,5 +2,6 @@
 <resources>
     <paths>
         <external-path path="" name="camera_photos" />
+        <external-path path="" name="download"/>
     </paths>
 </resources>
